--- a/css/home_light.css
+++ b/css/home_light.css
@@ -1592,7 +1592,7 @@
 		font-weight: 300;
 		color: #666;
 		line-height: 1.5em;
-		font-family: "times";
+		font-family: "Times New Roman";
 		text-align: inherit;
 	}
 
