--- a/css/home_dark.css
+++ b/css/home_dark.css
@@ -2118,7 +2118,7 @@
 	#footer {
 		margin-left: 375px;
 		text-align: center;
-		background-color: #2B2E31; /*#dce3e2;*/
+		background-color: #222629; /*#dce3e2;*/
 		padding: 3em 0 4em 0;
 		box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05), inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.025);
 		font-size: 0.8em;
@@ -2201,7 +2201,7 @@
 
 
 			#main > section.two {
-				background-color:  #171A1B;/*#2B2E31;/*#f5fafa;*/
+				background-color:  #1d2023;/*#2B2E31;/*#f5fafa;*/
 			}
 
 			#main > section.three {
@@ -2326,7 +2326,7 @@
 		/* Footer */
 
 			#footer {
-				margin-left: 20%;
+				margin-left: 0%;
 			}
 
 		/* Main */
