--- a/css/home_light.css
+++ b/css/home_light.css
@@ -12,10 +12,12 @@
 	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
 		margin: 0;
 		padding: 0;
-		border: 0;
+		border: 1px solid white; /*border: 0;*/
 		font-size: 100%;
 		font: inherit;
 		vertical-align: baseline;
+		box-shadow;
+
 	}
 
 	article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
@@ -1562,7 +1564,7 @@
 		font-size: 19pt;
 		font-weight: 300;
 		line-height: 1.7em;
-		color: #888;
+		color: #010101; #888;
 	}
 
 		body.is-loading * {
@@ -1730,7 +1732,7 @@
 			height: 150px;/*48*/
 			background: #f00;
 		}
-			
+
 
 		.image.fit {
 			display: block;
@@ -1822,7 +1824,7 @@
 		width: 100%;
 		border-radius: 0.35em;
 		padding: 0.75em 1em 0.75em 1em;
-		box-shadow: inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.05);
+		-shadow: inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.05);
 		border: solid 1px rgba(0, 0, 0, 0.15);
 		-moz-transition: all 0.35s ease-in-out;
 		-webkit-transition: all 0.35s ease-in-out;
@@ -2306,7 +2308,7 @@
 		/* Footer */
 
 			#footer {
-				margin-left: 20%;
+				margin-left: 0%;
 			}
 
 		/* Main */
